--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,7 @@
       </div>
     </nav>
   </header>
-  <main class="flex-grow-1"></main>
+  <main class="flex-grow-1 p-3"><!-- Populated by code --></main>
   <footer class="sticky-bottom bg-body-secondary px-4 py-2 small">
     Copyright &copy; 2025 <a href="https://www.zero-g.net/" target="_blank">Hauke D</a> (haukex@zero-g.net) at the
     <a href="https://www.igb-berlin.de" target="_blank">IGB Berlin</a>.
