A bit more work on device discovery etc.

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Hello, World!</title>
+  <title>🔌 Web Serial API</title>
   <style> /* parcel will handle these */
     @import "styles.scss";  /* imports bootstrap */
     @import "~/node_modules/bootstrap-icons/font/bootstrap-icons.css";
@@ -21,7 +21,7 @@
           aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="navbar-brand"><i class="bi-balloon-heart"></i> Hello, World!</div>
+        <div class="navbar-brand">🔌 Web Serial API <span class="badge rounded-pill text-bg-danger">Alpha</span></div>
         <div class="collapse navbar-collapse" id="navbarToggler">
           <ul class="navbar-nav me-auto mb-2 mb-md-0">
             <li class="nav-item">
