Mostly added serial options

--- a/src/index.html
+++ b/src/index.html
@@ -17,12 +17,12 @@
   <header class="sticky-top">
     <nav class="navbar navbar-expand-md bg-body-tertiary">
       <div class="container-fluid">
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggler"
-          aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNavbarToggler"
+          aria-controls="mainNavbarToggler" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="navbar-brand">🔌 Web Serial API <span class="badge rounded-pill text-bg-danger">Alpha</span></div>
-        <div class="collapse navbar-collapse" id="navbarToggler">
+        <div class="navbar-brand"><i class="bi-plug-fill"></i> Web Serial API <span class="badge rounded-pill text-bg-danger">Alpha</span></div>
+        <div class="collapse navbar-collapse" id="mainNavbarToggler">
           <ul class="navbar-nav me-auto mb-2 mb-md-0">
             <li class="nav-item">
               <a class="nav-link disabled" aria-disabled="true">Home</a>
