--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,12 @@
       </div>
     </nav>
   </header>
-  <main class="flex-grow-1 p-3"><!-- Populated by code --></main>
+  <main class="flex-grow-1 p-3"><!-- Populated by code -->
+    <noscript><div class="alert alert-danger" role="alert">
+      <i class="bi-exclamation-octagon me-1"></i>
+      <strong class="me-1">JavaScript is disabled.</strong><hr>
+      JavaScript is required for this web application.</div></noscript>
+  </main>
   <footer class="bg-body-secondary px-3 py-2 small">
     Copyright &copy; 2025 <a href="https://www.zero-g.net/" target="_blank">Hauke D</a> (haukex@zero-g.net) at the
     <a href="https://www.igb-berlin.de" target="_blank">IGB Berlin</a>.
