Add intermediate states
To prevent user inputs before actually connected

--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
     <nav class="navbar navbar-expand-md bg-body-secondary">
       <div class="container-fluid">
         <div class="navbar-brand"><i class="bi-plug-fill"></i> Web Serial
-          <span class="badge rounded-pill text-bg-danger">Alpha</span></div>
+          <span class="badge rounded-pill text-bg-warning">Beta</span></div>
       </div>
     </nav>
   </header>
